Expert-level deepening: best-practices + AI/BI + bold fix
Best Practices (10 files, +2,716 lines):
- compute-optimization: Spot fault tolerance, Photon cost analysis, Serverless vs Classic
- access-control: Row Filter/Column Mask, ABAC tags, Audit Log queries
- delta-lake-optimization: Liquid Clustering, VACUUM, Deletion Vectors, Predictive Opt
- storage-and-warehouse: SQL Warehouse sizing, auto-scaling, multi-Warehouse patterns
- spark-query-tuning: AQE deep dive, Skew resolution, Spark UI plan reading, Top 5 problems
- sql-warehouse-and-pipeline: Query Profile, SDP tuning, pipeline observability
- ml-and-diagnostics: GPU sizing (A10G/A100/H100), TorchDistributor, OOM debugging
- platform-design: Workspace separation, Account Console, CMK, PrivateLink, IaC
- hybrid-bi-strategy: Embedded/Headless BI, Tableau/Power BI/Looker, migration
- aibi-overview: Architecture, Genie Space vs Code, Dashboard, Quick Start

Bold rendering fix (183 files):
- Opening ** space removal
- Closing ** Korean space addition
- Table cell bold fix

Co-authored-by: Isaac